--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
       <footer class="bg-color-gray padding-default">
         <div class="flex footer-row">
           <!-- col 1 -->
-            <div class="footer-col flex">
+            <div class="footer-col-lateral flex">
               <div class="album-mini-img">
                 <img src="img/label/sinister.jpeg" alt="">
               </div>
@@ -278,16 +278,37 @@
           </div>
           <!-- end col 1 -->
           <!-- col 2 -->
-          <div class="footer-col">
-            <div class="player">
+          <div class="footer-col-center ">
+            <div class="player ">
+              <ul class="flex player-cmd font-white">
+                <li><i class="fa fa-random" aria-hidden="true"></i></li>
+                <li><i class="fa fa-step-backward" aria-hidden="true"></i></li>
+                <li class="play-resize"><i class="fa fa-play-circle-o" aria-hidden="true"></i></li>
+                <li><i class="fa fa-step-forward" aria-hidden="true"></i></li>
+                <li><i class="fa fa-repeat" aria-hidden="true"></i></li>
+              </ul>
+              <div class="flex play-bar-row">
+                <div class="time font-white" name="time-to">
+                  <span>0:25</span>
+                </div>
+                <div class="play-bar">
+                </div>
+                <div class="time font-white">
+                  <span>4:35</span>
+                </div>
+              </div>
+
 
             </div>
 
           </div>
           <!-- end col 2 -->
           <!-- col 3 -->
-          <div class="footer-col">
+          <div class="footer-col-lateral">
             <div class="controllers">
+              <ul class="flex">
+
+              </ul>
 
 
             </div>
