footer part 2, player terminato

--- a/index.html
+++ b/index.html
@@ -292,13 +292,16 @@
                   <span>0:25</span>
                 </div>
                 <div class="play-bar">
+                  <div class="play-position-20perc">
+                    <div class="playhead">
+                    </div>
+                  </div>
+
                 </div>
                 <div class="time font-white">
                   <span>4:35</span>
                 </div>
               </div>
-
-
             </div>
 
           </div>
