footer part 3, lato dx completato

--- a/index.html
+++ b/index.html
@@ -280,12 +280,23 @@
           <!-- col 2 -->
           <div class="footer-col-center ">
             <div class="player ">
-              <ul class="flex player-cmd font-white">
-                <li><i class="fa fa-random" aria-hidden="true"></i></li>
-                <li><i class="fa fa-step-backward" aria-hidden="true"></i></li>
-                <li class="play-resize"><i class="fa fa-play-circle-o" aria-hidden="true"></i></li>
-                <li><i class="fa fa-step-forward" aria-hidden="true"></i></li>
-                <li><i class="fa fa-repeat" aria-hidden="true"></i></li>
+              <ul class="flex player-cmd">
+                <li class="over-white">
+                  <i class="fa fa-random" aria-hidden="true"></i>
+                </li>
+                <li class="over-white">
+                  <i class="fa fa-step-backward" aria-hidden="true"></i>
+                </li>
+                <li class="play-resize">
+                  <i class="fa fa-play-circle-o" aria-hidden="true">
+                  </i>
+                </li>
+                <li class="over-white">
+                  <i class="fa fa-step-forward" aria-hidden="true"></i>
+                </li>
+                <li class="over-white">
+                  <i class="fa fa-repeat" aria-hidden="true"></i>
+                </li>
               </ul>
               <div class="flex play-bar-row">
                 <div class="time font-white" name="time-to">
@@ -296,7 +307,6 @@
                     <div class="playhead">
                     </div>
                   </div>
-
                 </div>
                 <div class="time font-white">
                   <span>4:35</span>
@@ -308,12 +318,24 @@
           <!-- end col 2 -->
           <!-- col 3 -->
           <div class="footer-col-lateral">
-            <div class="controllers">
+            <div class="flex controllers">
               <ul class="flex">
-
+                <li class="over-white">
+                  <i class="fa fa-list" aria-hidden="true"></i>
+                </li>
+                <li class="over-white">
+                  <i class="fa fa-desktop" aria-hidden="true"></i>
+                </li>
+                <li class="over-white">
+                  <i class="fa fa-volume-up" aria-hidden="true"></i>
+                </li>
               </ul>
-
-
+              <div class="volume-bar">
+                <div class="volume-position-20perc">
+                  <div class="vol-head">
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- end col 3 -->
