impostazione dettagliata media query part 1

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <!-- END SID-BAR (left) -->
         <div class="box-r float-l">
           <main class="bg-color-blackrussian">
-            <header class="fixed">
+            <header class="fixed hidden-height90">
               <div class="button-upgrade-container float-r">
                 <a href="#" class="button font-white">
                   EFFETTUA L' UPGRADE
@@ -102,7 +102,7 @@
               </div>
             </header>
             <!-- NAVBAR ROW -->
-            <nav class="">
+            <nav class="flex ">
               <ul>
                 <li class="over-white">IN EVIDENZA <hr></li>
                 <li class="over-white">PODCAST <hr></li>
@@ -254,7 +254,7 @@
         <div class="flex footer-row">
           <!-- col 1 -->
             <div class="footer-col-lateral flex">
-              <div class="album-mini-img">
+              <div class="album-mini-img hidden-xs">
                 <img src="img/label/sinister.jpeg" alt="">
               </div>
               <div class="box-titl-minialbum">
@@ -298,7 +298,7 @@
                   <i class="fa fa-repeat" aria-hidden="true"></i>
                 </li>
               </ul>
-              <div class="flex play-bar-row">
+              <div class="flex play-bar-row ">
                 <div class="time font-white" name="time-to">
                   <span>0:25</span>
                 </div>
@@ -308,7 +308,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="time font-white">
+                <div class="time font-white hidden-xs">
                   <span>4:35</span>
                 </div>
               </div>
@@ -330,7 +330,7 @@
                   <i class="fa fa-volume-up" aria-hidden="true"></i>
                 </li>
               </ul>
-              <div class="volume-bar">
+              <div class="volume-bar hidden-md hidden-sm hidden-xs">
                 <div class="volume-position-20perc">
                   <div class="vol-head">
                   </div>
