impostazioni media query height  (part 2)

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   <i class="fa fa-repeat" aria-hidden="true"></i>
                 </li>
               </ul>
-              <div class="flex play-bar-row ">
+              <div class="flex play-bar-row hidden-underxs">
                 <div class="time font-white" name="time-to">
                   <span>0:25</span>
                 </div>
@@ -317,7 +317,7 @@
           </div>
           <!-- end col 2 -->
           <!-- col 3 -->
-          <div class="footer-col-lateral">
+          <div class="footer-col-lateral footer-dx">
             <div class="flex controllers">
               <ul class="flex">
                 <li class="over-white">
