--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper bg-color-blackrussian">
       <!-- SID-BAR (left) -->
       <div class="principal-section clearfix">
-        <div class="side-bar bg-color-black float-l padding-default flex-    column hidden-height90">
+        <div class="side-bar bg-color-black float-l  flex-column hidden-height90">
           <!-- logo side-bar -->
           <div class="side-top">
             <div class="logo-container  hidden-xs">
@@ -59,19 +59,23 @@
                 <i class="fa fa-plus-square" aria-hidden="true"></i>
                 <span class="">Crea Playlist</span>
               </div>
-              <ul class="scroll-list">
-                <li class="over-white">Nome Playlist</li>
-                <li class="over-white">Nome Playlist</li>
-                <li class="over-white">Nome Playlist</li>
-                <li class="over-white">Nome Playlist</li>
-                <li class="over-white">Nome Playlist</li>
-                <li class="over-white">Nome Playlist</li>
-                <li class="over-white">Nome Playlist</li>
-              </ul>
             </div>
+
           </div>
+
+          <ul class="scroll-list padding-l20">
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">Nome Playlist</li>
+          </ul>
+
             <!-- end playlist -->
-          <div class="side-bottom padding-default">
+          <div class="side-bottom">
             <div class="user-container padding-l20 ">
               <div class="download-app">
                 <div class="download ">
@@ -253,10 +257,10 @@
         </div>
       </div>
       <!-- FOOTER (album/player/volume) -->
-      <footer class="bg-color-gray padding-default">
+      <footer class="bg-color-gray ">
         <div class="flex footer-row">
           <!-- col 1 -->
-            <div class="footer-col-lateral flex">
+            <div class="footer-col-lateral flex footer-sx">
               <div class="album-mini-img hidden-xs">
                 <img src="img/label/sinister.jpeg" alt="">
               </div>
