restyle della nav del main

--- a/index.html
+++ b/index.html
@@ -23,51 +23,79 @@
               <img src="img/icon/logo.svg" alt="" class="">
             </div>
             <div class="xs-logo-sidebar font-white hidden-sm hidden-md">
-              <i class="fa fa-spotify" aria-hidden="true"></i>
+              <i class="fa fa-spotify" aria-hidden="true">
+              </i>
             </div>
             <div class="nav-side-b">
               <ul>
-                <li class="over-white">
-                  <img src="img/icon/home.svg" alt="">
-                  <span class="hidden-xs">
-                    Home
-                  </span>
-                </li class="over-white">
                 <li >
-                  <img src="img/icon/search.svg" alt="">
-                  <span class="hidden-xs">
-                    Cerca
-                  </span>
+                  <a href="#">
+                    <img src="img/icon/home.svg" alt="">
+                    <span class="hidden-xs">
+                      Home
+                    </span>
+                  </a>
                 </li>
-                <li class="over-white">
-                  <img src="img/icon/libreria.svg" alt="">
-                  <span class="hidden-xs">
-                    La tua libreria
-                  </span>
+                <li>
+                  <a href="#">
+                    <img src="img/icon/search.svg" alt="">
+                    <span class="hidden-xs">
+                      Cerca
+                    </span>
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    <img src="img/icon/libreria.svg" alt="">
+                    <span class="hidden-xs">
+                      La tua libreria
+                    </span>
+                  </a>
                 </li>
               </ul>
             </div>
             <div class="playlist-container hidden-xs padding-l20 ">
               <div class="playlist-title-section">
-                <span class="font-white">PLAYLIST</span>
+                <span class="font-white">
+                  PLAYLIST
+                </span>
               </div>
               <div class="crea-pl-container over-white">
-                <i class="fa fa-plus-square" aria-hidden="true"></i>
-                <span class="">Crea Playlist</span>
+                <i class="fa fa-plus-square" aria-hidden="true">
+                </i>
+                <span class="">
+                  Crea Playlist
+                </span>
               </div>
             </div>
           </div>
           <!-- end side-bar top logo/nav menu/ playlist button -->
           <!-- playlist with scroll -->
           <ul class="scroll-list padding-l20 hidden-xs">
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
-            <li class="over-white">Nome Playlist</li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
+            <li class="over-white">
+              Nome Playlist
+            </li>
           </ul>
           <!-- end playlist with scroll -->
           <!-- install app and user name -->
@@ -107,29 +135,49 @@
           </header>
           <nav class="flex">
             <ul>
-              <li class="over-white">
-                IN EVIDENZA <hr>
+              <li>
+                <a href="#">
+                  IN EVIDENZA
+                </a>
+                <hr>
               </li>
-              <li class="over-white">
-                PODCAST <hr>
+              <li>
+                <a href="#">
+                  PODCAST
+                </a>
+                <hr>
               </li>
-              <li class="over-white">
-                CLASSIFICHE <hr>
+              <li>
+                <a href="#">
+                  CLASSIFICHE
+                </a>
+                <hr>
               </li>
-              <li class="over-white">
-                GENERI E MOOD <hr>
+              <li>
+                <a href="#">
+                  GENERI E MOOD
+                </a>
+                <hr>
               </li>
-              <li class="over-white">
-                NUOVE USCITE <hr>
+              <li>
+                <a href="#">
+                  NUOVE USCITE
+                </a>
+                <hr>
               </li>
-              <li class="over-white">
-                SCOPRI <hr>
+              <li>
+                <a href="#">
+                  SCOPRI
+                </a>
+                <hr>
               </li>
             </ul>
           </nav>
           <!-- albums row recently played -->
           <div class="margin-main-titl">
-            <span class="main-title font-white">Recently played</span>
+            <span class="main-title font-white">
+              Recently played
+            </span>
           </div>
           <div class="flex albums-hr">
             <div class="img-album-container">
@@ -137,13 +185,13 @@
                 <img src="img/label/metal_lifting.jpg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Heavy Metal
-                </span>
+                </a>
                 <div class="label-subtitle ">
-                  <span class="subtitle">
+                  <a href="#" class="subtitle over-underline">
                     Subtitle
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -152,13 +200,13 @@
                 <img src="img/label/stranger.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)
-                </span>
+                </a>
                 <div class="label-subtitle ">
-                  <span class="subtitle">
+                  <a href="#" class="subtitle over-underline">
                     Kyle Dixon & Michael Stein
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -167,13 +215,13 @@
                 <img src="img/label/aquietplace.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   A quiet place
-                </span>
-                <div class="label-subtitle ">
-                  <span class="subtitle">
+                </a>
+                <div class="label-subtitle">
+                  <a href="#" class="subtitle over-underline">
                     Subtitle
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -182,13 +230,13 @@
                 <img src="img/label/split.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Split
-                </span>
+                </a>
                 <div class="label-subtitle ">
-                  <span class="subtitle">
+                  <a href="#" class="subtitle over-underline">
                     Subtitle
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -197,13 +245,13 @@
                 <img src="img/label/cure.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   A cure for wellness
-                </span>
+                </a>
                 <div class="label-subtitle ">
-                  <span class="subtitle">
+                  <a href="#" class="subtitle over-underline">
                     Subtitle
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -212,13 +260,13 @@
                 <img src="img/label/sinister.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Sinister
-                </span>
+                </a>
                 <div class="label-subtitle ">
-                  <span class="subtitle">
+                  <a href="#" class="subtitle over-underline">
                     Subtitle
-                  </span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -229,7 +277,7 @@
             <span class="main-title font-white">
               Creato per John Doe
             </span>
-            </br>
+            <br>
             <span class="subtitle">
               Piú ascolti, piú accurati saranno i suggerimenti.
             </span>
@@ -240,9 +288,9 @@
                 <img src="img/label/radar.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Rlease Radar
-                </span>
+                </a>
               </div>
             </div>
             <div class="img-album-container">
@@ -250,9 +298,9 @@
                 <img src="img/label/mixdaily.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Daily Mix 1
-                </span>
+                </a>
               </div>
             </div>
           </div>
@@ -262,7 +310,7 @@
             <span class="main-title font-white">
               Artisti piú popolari
             </span>
-            </br>
+            <br>
             <span class="subtitle">
               Piú ascolti, piú accurati saranno i suggerimenti.
             </span>
@@ -273,9 +321,9 @@
                 <img src="img/label/youg.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Lana del Rey
-                </span>
+                </a>
               </div>
             </div>
             <div class="img-album-container">
@@ -283,9 +331,9 @@
                 <img src="img/label/einaudi.jpeg" alt="">
               </div>
               <div class="label-title-box text-center">
-                <span class="font-white">
+                <a href="#" class="font-white over-underline">
                   Einaudi
-                </span>
+                </a>
               </div>
             </div>
           </div>
@@ -313,10 +361,12 @@
           </div>
           <div class=" flex icon-folder-like">
             <span class="over-white icon-foot-left">
-              <i class="fa fa-heart-o" aria-hidden="true"></i>
+              <i class="fa fa-heart-o" aria-hidden="true">
+              </i>
             </span>
             <span class="over-white icon-foot-left">
-              <i class="fa fa-folder-o" aria-hidden="true"></i>
+              <i class="fa fa-folder-o" aria-hidden="true">
+              </i>
             </span>
           </div>
         </section>
@@ -326,25 +376,31 @@
           <div class="player ">
             <ul class="flex player-cmd">
               <li class="over-white">
-                <i class="fa fa-random" aria-hidden="true"></i>
+                <i class="fa fa-random" aria-hidden="true">
+                </i>
               </li>
               <li class="over-white">
-                <i class="fa fa-step-backward" aria-hidden="true"></i>
+                <i class="fa fa-step-backward" aria-hidden="true">
+                </i>
               </li>
               <li class="play-resize">
                 <i class="fa fa-play-circle-o" aria-hidden="true">
                 </i>
               </li>
               <li class="over-white">
-                <i class="fa fa-step-forward" aria-hidden="true"></i>
+                <i class="fa fa-step-forward" aria-hidden="true">
+                </i>
               </li>
               <li class="over-white">
-                <i class="fa fa-repeat" aria-hidden="true"></i>
+                <i class="fa fa-repeat" aria-hidden="true">
+                </i>
               </li>
             </ul>
             <div class="flex play-bar-row hidden-underxs">
-              <div class="time font-white" name="time-to">
-                <span>0:25</span>
+              <div class="time font-white">
+                <span>
+                  0:25
+                </span>
               </div>
               <div class="play-bar">
                 <div class="play-position-20perc">
@@ -353,7 +409,9 @@
                 </div>
               </div>
               <div class="time font-white hidden-xs">
-                <span>4:35</span>
+                <span>
+                  4:35
+                </span>
               </div>
             </div>
           </div>
@@ -364,13 +422,16 @@
           <div class="flex controllers">
             <ul class="flex">
               <li class="over-white">
-                <i class="fa fa-list" aria-hidden="true"></i>
+                <i class="fa fa-list" aria-hidden="true">
+                </i>
               </li>
               <li class="over-white">
-                <i class="fa fa-desktop" aria-hidden="true"></i>
+                <i class="fa fa-desktop" aria-hidden="true">
+                </i>
               </li>
               <li class="over-white">
-                <i class="fa fa-volume-up" aria-hidden="true"></i>
+                <i class="fa fa-volume-up" aria-hidden="true">
+                </i>
               </li>
             </ul>
             <div class="volume-bar hidden-md hidden-sm hidden-xs">
