cambio di style quando clicchiamo su una voce della nav o del menu side

--- a/index.html
+++ b/index.html
@@ -28,26 +28,32 @@
             </div>
             <div class="nav-side-b">
               <ul>
-                <li >
+                <li>
                   <a href="#">
+                    <div class="vertical-line">
+                    </div>
                     <img src="img/icon/home.svg" alt="">
-                    <span class="hidden-xs">
+                    <span class="hidden-xs menu">
                       Home
                     </span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
+                    <div class="vertical-line">
+                    </div>
                     <img src="img/icon/search.svg" alt="">
-                    <span class="hidden-xs">
+                    <span class="hidden-xs menu">
                       Cerca
                     </span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
+                    <div class="vertical-line">
+                    </div>
                     <img src="img/icon/libreria.svg" alt="">
-                    <span class="hidden-xs">
+                    <span class="hidden-xs menu">
                       La tua libreria
                     </span>
                   </a>
