--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
             <img src="img/label/sinister.jpeg" alt="">
           </div>
           <div class="box-titl-minialbum">
-            <span class="title-mini-album font-white">
+            <span class="title-mini-album font-white over-underline">
               Sinister
             </span>
-            <div class="subtitle-mini-album">
+            <div class="subtitle-mini-album over-underline">
               <span >
                 Brano Nome
               </span>
